adicionando notebook de regressao linear + gitignore

--- a/Machine Learning/simple_linear_regression.ipynb
+++ b/Machine Learning/simple_linear_regression.ipynb
@@ -23,6 +23,14 @@
   },
   {
    "cell_type": "markdown",
+   "id": "c8c17593-0c22-4540-bd8a-7fe5a6074b51",
+   "metadata": {},
+   "source": [
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "5412f204-ba50-4c41-a63b-67696a6e88aa",
    "metadata": {},
    "source": [
@@ -433,12 +441,14 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "62f71cce-c770-48e0-92a5-ba0d334297a1",
+   "cell_type": "markdown",
+   "id": "db4d1cad-68da-49a5-a172-aa4c0aaa36a3",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## Para onde ir a partir daqui (extra)\n",
+    "* <font color=\"red\">Você consegue descobrir precisão das previsões (RMSE e MSE)???</font>\n",
+    "* Estender o mesmo problema para vários recursos de entrada."
+   ]
   },
   {
    "cell_type": "code",
