--- a/Machine Learning/simple_linear_regression.ipynb
+++ b/Machine Learning/simple_linear_regression.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "id": "19a134f8",
    "metadata": {},
    "outputs": [
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
    "id": "c79170c0",
    "metadata": {},
    "outputs": [],
@@ -86,16 +86,16 @@
     "import numpy as np\n",
     "import math\n",
     "\n",
-    "# library for regular plot visualizations\n",
+    "# # library for regular plot visualizations\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
-    "#library for responsive visualizations\n",
+    "# #library for responsive visualizations\n",
     "import plotly.express as px\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 4,
    "id": "6457c7f9",
    "metadata": {},
    "outputs": [
@@ -122,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 5,
    "id": "90f9b920",
    "metadata": {},
    "outputs": [
@@ -227,7 +227,7 @@
        "9   10   65.3"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -475,7 +475,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.3"
+   "version": "3.13.0"
   }
  },
  "nbformat": 4,
